--- a/afd/weidel/index.html
+++ b/afd/weidel/index.html
@@ -96,14 +96,17 @@
   
     <div class="collapsible-content">
       <p class="party-highlight-description">
-        Im Mai 2018 sorgte Alice Weidel mit einer Bemerkung im Bundestag für Aufsehen. In der Aussprache bezeichnete sie "Burkas, Kopftuchmädchen und alimentierte Messermänner und sonstige Taugenichtse" als eine Gefahr für den Wohlstand und Sozialstaat Deutschlands. 
-      </p>
-      <p class="party-highlight-description">
-        Diese Aussage führte zu tumultartigen Szenen im Bundestag, in denen Weidel einen Ordnungsruf des Bundestagspräsidenten erhielt, der sie für diskriminierend gegenüber Frauen, die ein Kopftuch tragen, und Migranten hielt. Weidel legte fristgerecht Einspruch gegen den Ordnungsruf ein.
-      </p>
-      <p class="party-highlight-description">
-        Ihre Äußerung wurde von vielen als rassistisch und frauenfeindlich empfunden, während ihre Anhänger sie als Ausdruck einer nötigen Kritik an der Integrationspolitik und den sozialen Missständen interpretierten.
-      </p>
+        Im Mai 2018 sorgte <strong>Alice Weidel</strong> mit einer Bemerkung im Bundestag für Aufsehen. In der Aussprache bezeichnete sie 
+        <mark class="afd">"Burkas, Kopftuchmädchen und alimentierte Messermänner und sonstige Taugenichtse"</mark> als eine Gefahr für den Wohlstand und Sozialstaat Deutschlands.
+    </p>
+    <p class="party-highlight-description">
+        Diese Aussage führte zu <mark class="afd">tumultartigen Szenen im Bundestag</mark>, in denen Weidel einen <mark class="afd">Ordnungsruf des Bundestagspräsidenten</mark> erhielt, 
+        der sie für <mark class="afd">diskriminierend gegenüber Frauen, die ein Kopftuch tragen, und Migranten</mark> hielt. Weidel legte fristgerecht Einspruch gegen den Ordnungsruf ein.
+    </p>
+    <p class="party-highlight-description">
+        Ihre Äußerung wurde von vielen als <mark class="afd">rassistisch und frauenfeindlich</mark> empfunden, während ihre Anhänger sie als Ausdruck einer 
+        <mark class="afd">nötigen Kritik an der Integrationspolitik</mark> und den <mark class="afd">sozialen Missständen</mark> interpretierten.
+    </p>
 
       <div class="smallvideo-container">
         <div class="video-wrapper">
