--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -433,16 +433,16 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Das von der <strong>CSU</strong> unter <strong>Alexander Dobrindt</strong> initiierte und von <strong>Andreas Scheuer</strong> weitergeführte Projekt der <mark class="csu">Pkw-Maut</mark> für ausländische Autofahrer ist zu einem
+            Das von der <strong>CSU</strong> unter <strong>Alexander Dobrindt</strong> initiierte und von <strong>Andreas Scheuer</strong> weitergeführte Projekt der <mark class="cdu">Pkw-Maut</mark> für ausländische Autofahrer ist zu einem
             <strong>kostspieligen Desaster</strong> für die deutschen Steuerzahler geworden. Nachdem der <strong>Europäische Gerichtshof</strong> die Maut für rechtswidrig erklärte, muss der Bund nun
-            <mark class="csu">243 Millionen Euro Schadenersatz</mark> an die Betreiberfirmen zahlen.
+            <mark class="cdu">243 Millionen Euro Schadenersatz</mark> an die Betreiberfirmen zahlen.
         </p>
         <p class="party-highlight-description">
-            Verkehrsminister <strong>Andreas Scheuer</strong> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag. Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar <mark class="csu">560 Millionen Euro</mark>.
+            Verkehrsminister <strong>Andreas Scheuer</strong> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag. Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar <mark class="cdu">560 Millionen Euro</mark>.
         </p>
         <p class="party-highlight-description">
-            Kritiker warfen der <strong>CSU</strong> vor, mit der Pkw-Maut <mark class="csu">populistische Politik</mark> zu betreiben und die <strong>europäische Zusammenarbeit zu missachten</strong>. Das Scheitern des Projekts und die hohen Kosten werden als
-            <mark class="csu">peinliche Niederlage für die CSU</mark> und als Beispiel für <strong>politisches Fehlmanagement</strong> gewertet. Die Opposition kritisiert insbesondere das Verhalten von <strong>Andreas Scheuer</strong>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
+            Kritiker warfen der <strong>CSU</strong> vor, mit der Pkw-Maut <mark class="cdu">populistische Politik</mark> zu betreiben und die <strong>europäische Zusammenarbeit zu missachten</strong>. Das Scheitern des Projekts und die hohen Kosten werden als
+            <mark class="cdu">peinliche Niederlage für die CSU</mark> und als Beispiel für <strong>politisches Fehlmanagement</strong> gewertet. Die Opposition kritisiert insbesondere das Verhalten von <strong>Andreas Scheuer</strong>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
         </p>
 
           <p class="party-highlight-date">
