--- a/fdp/index.html
+++ b/fdp/index.html
@@ -126,77 +126,91 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Ein <strong>häufiger Vorwurf</strong>, der die FDP seit Jahrzehnten
-            begleitet, ist der der <strong>Wählertäuschung</strong>. Kritiker
-            bemängeln, dass die FDP
-            <strong
-              >regelmäßig andere politische Positionen vertritt und umsetzt,
-              sobald sie an Regierungsmacht beteiligt ist, als sie zuvor im
-              Wahlkampf versprochen hat.</strong
+            Ein <strong>häufiger Vorwurf</strong>, der die
+            <strong>FDP</strong> seit Jahrzehnten begleitet, ist der der
+            <mark class="fdp">Wählertäuschung</mark>. Kritiker bemängeln, dass
+            die FDP
+            <mark class="fdp"
+              >regelmäßig andere politische Positionen vertritt und
+              umsetzt</mark
+            >, sobald sie an <mark class="fdp">Regierungsmacht</mark> beteiligt
+            ist, als sie zuvor im Wahlkampf versprochen hat. Dieses Muster, so
+            der Vorwurf,
+            <mark class="fdp"
+              >führe zu einem systematischen Vertrauensbruch</mark
             >
-            Dieses Muster, so der Vorwurf,
-            <strong
-              >führe zu einem systematischen Vertrauensbruch gegenüber den
-              Wählern</strong
-            >
-            und untergrabe die Glaubwürdigkeit der Partei nachhaltig. Viele
-            Wähler, die der FDP ihr Vertrauen schenken, sehen sich demnach
-            <strong>immer wieder enttäuscht und betrogen</strong>, da die FDP
-            ihre zentralen Wahlversprechen in Regierungsverantwortung
+            gegenüber den Wählern und untergrabe die
+            <mark class="fdp">Glaubwürdigkeit der Partei</mark> nachhaltig.
+            Viele Wähler, die der FDP ihr Vertrauen schenken, sehen sich demnach
+            <mark class="fdp">immer wieder enttäuscht und betrogen</mark>, da
+            die FDP ihre zentralen Wahlversprechen in Regierungsverantwortung
             vermeintlich verrät.
           </p>
+
           <p class="party-highlight-description">
-            <strong
-              >Das Kernproblem liegt in der Diskrepanz zwischen dem liberalen
-              Wahlkampf-Versprechen und der oft pragmatischeren,
-              kompromissbereiteren Regierungspolitik der FDP.</strong
-            >
-            Im Wahlkampf inszeniert sich die FDP gerne als
-            <strong
+            Das Kernproblem liegt in der
+            <mark class="fdp"
+              >Diskrepanz zwischen Wahlkampfversprechen und
+              Regierungspolitik</mark
+            >. Im Wahlkampf inszeniert sich die FDP gerne als
+            <mark class="fdp"
               >kompromisslose Vertreterin freiheitlicher und
-              marktwirtschaftlicher Prinzipien</strong
-            >, die <strong>klare Kante gegen andere Parteien zeigt</strong> und
-            <strong>unpopuläre, aber notwendige Reformen</strong> verspricht.
-            Sobald es jedoch um Koalitionsverhandlungen und
+              marktwirtschaftlicher Prinzipien</mark
+            >, die
+            <mark class="fdp">klare Kante gegen andere Parteien zeigt</mark> und
+            <mark class="fdp">unpopuläre, aber notwendige Reformen</mark>
+            verspricht. Sobald es jedoch um
+            <mark class="fdp">Koalitionsverhandlungen</mark> und
             Regierungsbeteiligung geht,
-            <strong>weicht die FDP diese Positionen oft deutlich auf</strong>,
-            um überhaupt regieren zu können.
-            <strong
-              >Für viele Wähler fühlt sich dies wie ein Verrat der
-              ursprünglichen Wahlversprechen an.</strong
+            <mark class="fdp"
+              >weicht die FDP diese Positionen oft deutlich auf</mark
+            >, um überhaupt regieren zu können.
+            <mark class="fdp"
+              >Für viele Wähler fühlt sich dies wie ein Verrat</mark
             >
+            der ursprünglichen Wahlversprechen an.
           </p>
+
           <p class="party-highlight-description">
-            <strong
-              >Beispiele für diesen vermeintlichen "Wortbruch" der FDP gibt es
-              in der Geschichte der Bundesrepublik zahlreich.</strong
+            <mark class="fdp"
+              >Beispiele für diesen vermeintlichen "Wortbruch"</mark
             >
-            Ob es um <strong>Steuerpolitik</strong>,
-            <strong>Sozialpolitik</strong>, <strong>Europapolitik</strong> oder
-            <strong>andere Politikfelder</strong> geht – immer wieder wird der
-            FDP vorgeworfen,
-            <strong>ihre eigenen Prinzipien zu verraten</strong>, um an der
-            Macht teilzuhaben.
-            <strong>Dieser Vorwurf des "Umfallens" und der Opportunität</strong>
+            der FDP gibt es in der Geschichte der Bundesrepublik zahlreich. Ob
+            es um <mark class="fdp">Steuerpolitik</mark>,
+            <mark class="fdp">Sozialpolitik</mark>,
+            <mark class="fdp">Europapolitik</mark>
+            oder andere Politikfelder geht – immer wieder wird der FDP
+            vorgeworfen,
+            <mark class="fdp">ihre eigenen Prinzipien zu verraten</mark>, um an
+            der Macht teilzuhaben.
+            <mark class="fdp"
+              >Dieser Vorwurf des "Umfallens" und der Opportunität</mark
+            >
             hat der FDP nicht nur den Ruf einer
-            <strong>unverlässlichen Partei</strong> eingebracht, sondern auch
-            wiederholt zu <strong>herben Wahlniederlagen</strong> geführt, wenn
-            sich die Wähler in ihrem Vertrauen missbraucht fühlten.
+            <mark class="fdp">unverlässlichen Partei</mark> eingebracht, sondern
+            auch wiederholt zu
+            <mark class="fdp">herben Wahlniederlagen</mark> geführt, wenn sich
+            die Wähler in ihrem Vertrauen missbraucht fühlten.
           </p>
+
           <p class="party-highlight-description">
-            Auch in der <strong>aktuellen Ampel-Koalition</strong> sehen
+            Auch in der <mark class="fdp">aktuellen Ampel-Koalition</mark> sehen
             Kritiker diese Muster wiederkehren. Die FDP sei
-            <strong>Kompromisse eingegangen</strong>, die ihren ursprünglichen
-            Positionen widersprechen, um mit SPD und Grünen regieren zu können.
-            Ob es sich tatsächlich um
-            <strong>notwendige Kompromisse im politischen Alltag</strong>
-            handelt oder um <strong>bewusste Wählertäuschung</strong>, ist dabei
-            <strong
-              >Ansichtssache und Gegenstand kontinuierlicher politischer
-              Debatten.</strong
+            <mark class="fdp">Kompromisse eingegangen</mark>, die ihren
+            ursprünglichen Positionen widersprechen, um mit SPD und Grünen
+            regieren zu können. Ob es sich tatsächlich um
+            <mark class="fdp"
+              >notwendige Kompromisse im politischen Alltag</mark
             >
-            Für viele enttäuschte FDP-Wähler bleibt jedoch der
-            <strong>bittere Nachgeschmack des verlorenen Vertrauens.</strong>
+            handelt oder um <mark class="fdp">bewusste Wählertäuschung</mark>,
+            ist dabei
+            <mark class="fdp"
+              >Ansichtssache und Gegenstand kontinuierlicher politischer
+              Debatten</mark
+            >. Für viele enttäuschte FDP-Wähler bleibt jedoch der
+            <mark class="fdp"
+              >bittere Nachgeschmack des verlorenen Vertrauens</mark
+            >.
           </p>
 
           <p class="party-highlight-date">
