--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -76,7 +76,7 @@
             Feminismus
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Annalena Baerbock sorgte wiederholt für Aufsehen, etwa durch
             Plagiatsvorwürfe und ihre auffällige Unfähigkeit, klare und
@@ -122,27 +122,27 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Im Januar 2023 sorgte <b>Baerbock</b> für einen Eklat, als sie in
-            einer Fragerunde im <b>Europarat</b> erklärte: „Wir führen einen
-            <b>Krieg gegen Russland</b> und nicht gegeneinander.“ Vielleicht lag
-            es an ihren <b>englischen Sprachkenntnissen</b> oder an ihrem
-            <b>Unvermögen, einen korrekten Satz zu formulieren</b>, aber diese
-            Aussage wurde von vielen als eine unbedachte und
-            <mark>gefährliche Eskalation des Konflikts</mark> wahrgenommen. Das
-            Ergebnis war <mark>Empörung</mark> – sowohl im In- als auch im
-            Ausland.
+              Im Januar 2023 sorgte <b class="gruene">Baerbock</b> für einen Eklat, als sie in
+              einer Fragerunde im <b class="gruene">Europarat</b> erklärte: „Wir führen einen
+              <b class="gruene">Krieg gegen Russland</b> und nicht gegeneinander.“ Vielleicht lag
+              es an ihren <b class="gruene">englischen Sprachkenntnissen</b> oder an ihrem
+              <b class="gruene">Unvermögen, einen korrekten Satz zu formulieren</b>, aber diese
+              Aussage wurde von vielen als eine unbedachte und
+              <mark class="gruene">gefährliche Eskalation des Konflikts</mark> wahrgenommen. Das
+              Ergebnis war <mark class="gruene">Empörung</mark> – sowohl im In- als auch im
+              Ausland.
           </p>
-
+        
           <p class="party-highlight-description">
-            Ihre Wortwahl ließ vermuten, dass sie die
-            <b>Differenzierung zwischen einer politischen Auseinandersetzung</b>
-            und einem tatsächlichen <b>Krieg</b> nicht richtig verstand.
-            Kritiker warfen ihr vor, die ohnehin gespannte Lage weiter zu
-            verschärfen und mit ihrer unüberlegten Rhetorik den internationalen
-            Konflikt unnötig anzuheizen – sicherlich keine Eigenschaft, die
-            einen deutschen Außenminister auszeichnen sollte.
+              Ihre Wortwahl ließ vermuten, dass sie die
+              <b class="gruene">Differenzierung zwischen einer politischen Auseinandersetzung</b>
+              und einem tatsächlichen <b class="gruene">Krieg</b> nicht richtig verstand.
+              Kritiker warfen ihr vor, die ohnehin gespannte Lage weiter zu
+              verschärfen und mit ihrer unüberlegten Rhetorik den internationalen
+              Konflikt unnötig anzuheizen – sicherlich keine Eigenschaft, die
+              einen deutschen Außenminister auszeichnen sollte.
           </p>
-
+      
           <div class="smallvideo-container">
             <div class="video-wrapper">
             <iframe
@@ -198,12 +198,12 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Im Februar 2023 sorgte <b>Annalena Baerbock</b> für Erheiterung, als
-            sie von einer „<b>360-Grad-Wende</b>“ sprach, die
-            <b>Russland angeblich vollziehen müsste</b>, um den Krieg zu
+            Im Februar 2023 sorgte <b class="gruene">Annalena Baerbock</b> für Erheiterung, als
+            sie von einer „<b class="gruene">360-Grad-Wende</b>“ sprach, die
+            <b class="gruene">Russland angeblich vollziehen müsste</b>, um den Krieg zu
             beenden. Dieser Begriff, der eher nach einem
-            <mark>Kreisverkehr</mark> als nach einer politischen Lösung klang,
-            sorgte nicht nur für <mark>Kopfschütteln</mark>, sondern auch für
+            <mark class="gruene">Kreisverkehr</mark> als nach einer politischen Lösung klang,
+            sorgte nicht nur für <mark class="gruene">Kopfschütteln</mark>, sondern auch für
             die Frage, ob sie den Unterschied zwischen einer echten Wendung und
             einem Rückkehrpunkt verstanden hat.
           </p>
