--- a/gruene/ganserer/index.html
+++ b/gruene/ganserer/index.html
@@ -85,7 +85,7 @@
             <strong>Schwerpunkte:</strong> Umweltpolitik, Transrechte,
             Gleichstellung
           </p>
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>Im Februar 2023 fiel Tessa Ganserer im Bundestag durch ihr transparentes Top auf, das ihren BH sichtbar machte.</p>
            <p>2022 stellte sie sich bei der Abstimmung zur Corona-Impfpflicht gegen die Linie ihrer Partei und votierte gegen die Zwangsmaßnahme, was man ihr als mutigen Schritt für persönliche Freiheit und Selbstbestimmung anrechnen kann.</p>
           </p>
@@ -126,17 +126,17 @@
           <p class="party-highlight-description">
             Tessa Ganserer sorgte im Februar 2023 mit ihrem Outfit in einer
             Ausschusssitzung des Bundestags für Aufregung. Sie erschien in einem
-            <b>transparenten Top</b>, das viel Haut und ihren <b>BH</b> sichtbar machte.
+            <b class="gruene">transparenten Top</b>, das viel Haut und ihren <b class="gruene">BH</b> sichtbar machte.
             Dies führte zu Empörung bei Politikerinnen anderer Parteien, die das als
             unangemessen für eine Sitzung des Deutschen Bundestages empfanden.
-        </p>
-        <p class="party-highlight-description">
-            Besonders <b>Kristina Schröder (CDU)</b> äußerte ihren Unmut und betonte,
+          </p>
+          <p class="party-highlight-description">
+            Besonders <b class="gruene">Kristina Schröder (CDU)</b> äußerte ihren Unmut und betonte,
             dass keine ihrer ehemaligen Kolleginnen so in einer Sitzung erschienen
             wäre. Dieser Vorfall lenkte die Aufmerksamkeit eher auf das Outfit als auf
-            die politische Diskussion, in der es um das <b>Selbstbestimmungsgesetz</b>
+            die politische Diskussion, in der es um das <mark class="gruene">Selbstbestimmungsgesetz</mark>
             für Trans-Personen ging.
-        </p>        
+          </p>
 
         <div class="smallvideo-container">
           <div class="video-wrapper">
