--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -83,7 +83,7 @@
             Integration & Migration
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             2024 verhängte Katrin Göring-Eckardt ein Ordnungsgeld gegen Beatrix
             von Storch, nachdem diese Tessa Ganserer als „biologisch und
@@ -130,17 +130,20 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Katrin Göring-Eckardt sorgte im Januar 2025 für Aufsehen mit ihrer
-            Äußerung zur Migrationsdebatte, in der sie <b>Integration</b> als
-            nebensächlich darstellte und den Zusammenhang zwischen Migration und
-            den wirklichen Alltagsproblemen der Bevölkerung in Frage stellte.
-            Sie behauptete, Themen wie <b>Integration</b> seien nicht das
+            Äußerung zur Migrationsdebatte, in der sie
+            <b class="gruene">Integration</b> als nebensächlich darstellte und
+            den Zusammenhang zwischen Migration und den wirklichen
+            Alltagsproblemen der Bevölkerung in Frage stellte. Sie behauptete,
+            Themen wie <b class="gruene">Integration</b> seien nicht das
             „Hauptproblem“ des Landes.
           </p>
           <p class="party-highlight-description">
             Ihre Worte stießen auf breite Kritik, insbesondere von Politikern,
             Fachverbänden und Experten, die die Aussagen als
-            <b>realitätsfern</b> und <b>spaltend</b> empfanden.
-            <b>Migration</b> und <b>Integration</b>
+            <b class="gruene">realitätsfern</b> und
+            <b class="gruene">spaltend</b> empfanden.
+            <mark class="gruene">Migration</mark> und
+            <mark class="gruene">Integration</mark>
             bleiben für viele Deutsche ein zentrales gesellschaftliches Thema,
             und die Bemerkung wurde als Verharmlosung der tatsächlichen
             Herausforderungen wahrgenommen.
