--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -102,7 +102,7 @@
             Wirtschafts- und Industriepolitik
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Habeck fiel wiederholt durch Wissenslücken in der Wirtschaftspolitik
             auf: Er verwechselte die BaFin mit dem Finanzamt, war ahnungslos bei
@@ -155,28 +155,30 @@
             Im September 2022 sorgte Robert Habeck für Kopfschütteln, als er in
             einer Talkshow erklärte, dass Unternehmen nicht zwangsläufig
             insolvent seien, nur weil sie nichts mehr verkaufen. Er behauptete,
-            Betriebe könnten auch einfach „aufhören zu produzieren“, ohne direkt
+            Betriebe könnten auch einfach „<b class="gruene">aufhören zu produzieren</b>“, ohne direkt
             pleitezugehen.
           </p>
+          
           <p class="party-highlight-description">
             Diese Aussage stieß auf massive Kritik von Wirtschaftsexperten,
             Unternehmern und Oppositionellen, die Habeck vorwarfen, grundlegende
             wirtschaftliche Zusammenhänge nicht zu verstehen. In einer Zeit
             steigender Energiepreise und wirtschaftlicher Unsicherheit wirkte
-            seine Bemerkung weltfremd und realitätsfern.
+            seine Bemerkung <mark class="gruene">weltfremd</mark> und
+            <mark class="gruene">realitätsfern</mark>.
           </p>
 
           <!-- Eingebettetes YouTube-Video -->
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/3F3XjET9aCM"
-              title="Robert Habecks Wirtschaftslogik"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/3F3XjET9aCM"
+                title="Robert Habecks Wirtschaftslogik"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> September 2022
@@ -235,14 +237,14 @@
 
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/sCJmvE-vbN8?si=M3yjcdCfWhf9ob14"
-              title="Herr Habeck, warum muss ich ihnen das erklären?"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/sCJmvE-vbN8?si=M3yjcdCfWhf9ob14"
+                title="Herr Habeck, warum muss ich ihnen das erklären?"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> August 2018
