--- a/gruene/index.html
+++ b/gruene/index.html
@@ -50,7 +50,7 @@
             <strong>Politische Ausrichtung:</strong> Mitte-links, grün, progressiv
           </p>
     
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p><strong>Impfpflicht-Abstimmung 2022:</strong> Im April 2022 stimmten die Grünen im Bundestag für eine allgemeine Impfpflicht gegen COVID-19.</p>
           <p><strong>Kosovo-Einsatz 1999:</strong> Die Grünen stimmten im Jahr 1999 für den NATO-Einsatz im Kosovo, der als illegal und völkerrechtswidrig angesehen wird.</p>
                    <h3>Wahlprogramm zur Bundestagswahl 2025</h3>
@@ -99,10 +99,11 @@
 <!-- Zusammenklappbarer Inhalt -->
 <div class="collapsible-content">
   <p class="party-highlight-description">
-    Im <strong>April 2022</strong> stimmten die <strong>Grünen</strong> gemeinsam mit der <strong>SPD</strong> im Bundestag für eine allgemeine
-    <strong>Impfpflicht gegen COVID-19</strong>. Diese Entscheidung stieß auf massive Ablehnung und führte zu <mark>landesweiten Protesten</mark>,
-    da viele Menschen die Zwangsmaßnahme als einen direkten Angriff auf ihre persönlichen Freiheiten und ihr Recht auf <strong>körperliche Unversehrtheit</strong>
-    sahen.
+    Im <b class="gruene">April 2022</b> stimmten die <b class="gruene">Grünen</b> gemeinsam mit der <b class="gruene">SPD</b> im Bundestag für eine 
+    <mark class="gruene">allgemeine Impfpflicht gegen COVID-19</mark>. 
+    Diese Entscheidung stieß auf massive Ablehnung und führte zu <mark class="gruene">landesweiten Protesten</mark>, 
+    da viele Menschen die Zwangsmaßnahme als einen direkten Angriff auf ihre persönlichen Freiheiten und ihr Recht auf 
+    <b class="gruene">körperliche Unversehrtheit</b> sahen.
   </p>
 
   <p class="party-highlight-description">
@@ -118,20 +119,28 @@
   </p>
 
   <p class="party-highlight-description">
-    <strong>Kritiker</strong> warfen den <strong>Grünen</strong> vor, das fundamentale Recht jedes Einzelnen auf <strong>körperliche Unversehrtheit</strong> zu ignorieren. Der Staat hat nicht das Recht, den Bürgern vorzuschreiben, was sie mit ihrem Körper anstellen. Die Entscheidung, eine Impfpflicht durchzusetzen, wäre ein schwerwiegender Eingriff in die persönliche <mark>Freiheit</mark> und die <mark>Selbstbestimmung</mark> der Menschen gewesen und hätte die Gesellschaft weiter gespalten.
+    <b class="gruene">Kritiker</b> warfen den <b class="gruene">Grünen</b> vor, das fundamentale Recht jedes Einzelnen auf 
+    <b class="gruene">körperliche Unversehrtheit</b> zu ignorieren. 
+    Der Staat hat nicht das Recht, den Bürgern vorzuschreiben, was sie mit ihrem Körper anstellen. 
+    Die Entscheidung, eine Impfpflicht durchzusetzen, wäre ein schwerwiegender Eingriff in die persönliche 
+    <mark class="gruene">Freiheit</mark> und die <mark class="gruene">Selbstbestimmung</mark> der Menschen gewesen 
+    und hätte die Gesellschaft weiter gespalten.
   </p>
 
   <p class="party-highlight-description">
-    Zudem war der <strong>Nutzen der "Impfung"</strong> fragwürdig. Viele gesundheitliche <mark>Risiken</mark> und <mark>Nebenwirkungen</mark> wurden entweder verschwiegen oder heruntergespielt. Eine ordentliche <strong>Aufklärung</strong> über mögliche Risiken und langfristige Auswirkungen wurde weitestgehend verhindert, wodurch die Menschen in ihrer Entscheidungsfreiheit und -kompetenz massiv eingeschränkt wurden.
+    Zudem war der <mark class="gruene">Nutzen der "Impfung"</mark> fragwürdig. Viele gesundheitliche 
+    <mark class="gruene">Risiken</mark> und <mark class="gruene">Nebenwirkungen</mark> wurden entweder verschwiegen oder heruntergespielt. 
+    Eine ordentliche <b class="gruene">Aufklärung</b> über mögliche Risiken und langfristige Auswirkungen wurde weitestgehend verhindert, 
+    wodurch die Menschen in ihrer Entscheidungsfreiheit und -kompetenz massiv eingeschränkt wurden.
   </p>
 
-  <p class="party-highlight-description">
-    Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus anderen Parteien verhindert werden: 
-    Die <a href="../../cducsu/"><strong>CDU/CSU</strong></a>, 
-    die <a href="../../fdp/"><strong>FDP</strong></a> und 
-    die <a href="../../linke/"><strong>Linke</strong></a> stimmten größtenteils gegen das Gesetz. 
+<p class="party-highlight-description">
+    Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus anderen Parteien verhindert werden:  
+    Die <a href="../../cducsu/"><strong>CDU/CSU</strong></a>,  
+    die <a href="../../fdp/"><strong>FDP</strong></a> und  
+    die <a href="../../linke/"><strong>Linke</strong></a> stimmten größtenteils gegen das Gesetz.  
     Die <a href="../../afd/"><strong>AfD</strong></a> war die einzige Partei, die geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
-  </p>
+</p>
   
       <p class="party-highlight-date">
         <strong>Zeitraum:</strong> April 2022
@@ -196,34 +205,35 @@
 <!-- Zusammenklappbarer Inhalt -->
 <div class="collapsible-content">
   <p class="party-highlight-description">
-    Der <strong>Kosovo-Luftangriff</strong> von 1999 war eine militärische
-    Operation der NATO gegen das <strong>Regime von Slobodan Milošević</strong> und die <strong>jugoslawische Armee</strong>. Der Luftangriff fand im Rahmen des
+    Der <b class="gruene">Kosovo-Luftangriff</b> von 1999 war eine militärische
+    Operation der NATO gegen das <b class="gruene">Regime von Slobodan Milošević</b> und die <b class="gruene">jugoslawische Armee</b>. Der Luftangriff fand im Rahmen des
     Kosovo-Konflikts statt, der sich um die ethnischen Spannungen zwischen Serben und Albanern in der Region drehte.
-  </p>
-  
-  <p class="party-highlight-description">
-    Der Angriff wurde
-    <strong>ohne Mandat des UN-Sicherheitsrats</strong> durchgeführt und war daher <mark>völkerrechtswidrig</mark>. Nach geltendem Völkerrecht war die
-    Bombardierung <strong>illegal</strong>, da sie gegen das <strong>Gewaltverbot der UN-Charta</strong> verstieß. Besonders die
-    <strong>deutsche Regierung unter Gerhard Schröder (SPD)</strong> und die <mark>Grünen</mark> spielten eine entscheidende Rolle bei der Beteiligung Deutschlands.
   </p>
 
   <p class="party-highlight-description">
-    Außenminister <strong>Joschka Fischer (Grüne)</strong> rechtfertigte den
+    Der Angriff wurde
+    <b class="gruene">ohne Mandat des UN-Sicherheitsrats</b> durchgeführt und war daher <mark class="gruene">völkerrechtswidrig</mark>. Nach geltendem Völkerrecht war die
+    Bombardierung <b class="gruene">illegal</b>, da sie gegen das <b class="gruene">Gewaltverbot der UN-Charta</b> verstieß. Besonders die
+    <b class="gruene">deutsche Regierung unter Gerhard Schröder (SPD)</b> und die <mark class="gruene">Grünen</mark> spielten eine entscheidende Rolle bei der Beteiligung Deutschlands.
+  </p>
+
+  <p class="party-highlight-description">
+    Außenminister <b class="gruene">Joschka Fischer (Grüne)</b> rechtfertigte den
     Einsatz als notwendig, um eine humanitäre Katastrophe zu verhindern.
     Dies führte zu heftigen Protesten innerhalb seiner eigenen Partei.
-    Auf dem Grünen-Parteitag 1999 wurde Fischer mit einem <mark>roten Farbbeutel</mark> beworfen – als Symbol für „Blut an den
+    Auf dem Grünen-Parteitag 1999 wurde Fischer mit einem <mark class="gruene">roten Farbbeutel</mark> beworfen – als Symbol für „Blut an den
     Händen“. Trotz Widerstandes in der Partei setzten sich Schröder und
     Fischer durch und machten Deutschland erstmals seit 1945 zur aktiven Kriegspartei.
   </p>
 
   <p class="party-highlight-description">
     Kritiker werfen der NATO vor, durch das militärische Eingreifen
-    <strong>die Souveränität Jugoslawiens verletzt</strong> und einen
-    <mark>völkerrechtswidrigen Präzedenzfall</mark> geschaffen zu haben. Der
+    <b class="gruene">die Souveränität Jugoslawiens verletzt</b> und einen
+    <mark class="gruene">völkerrechtswidrigen Präzedenzfall</mark> geschaffen zu haben. Der
     Luftangriff führte zu massiven Spannungen zwischen dem Westen und
     Russland und prägt die geopolitischen Beziehungen bis heute.
   </p>
+
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> März – Juni 1999
           </p>
