--- a/gruene/lang/index.html
+++ b/gruene/lang/index.html
@@ -82,7 +82,7 @@
             <strong>Schwerpunkte:</strong> Umweltpolitik, soziale Gerechtigkeit,
             Feminismus und Body Positivity
           </p>
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Lang fiel immer wieder durch ihre etwas fragwürdigen Aussagen auf,
             wie zum Beispiel ihre Versuche, die Essgewohnheiten der Deutschen zu
