--- a/gruene/neubauer/index.html
+++ b/gruene/neubauer/index.html
@@ -82,7 +82,7 @@
             nachhaltige Politik, Klimagerechtigkeit
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Luisa Neubauer unterstützte 2021 die Zero-Covid-Politik und
             beschuldigte im Mai Hans-Georg Maaßen ohne konkrete Beweise des
