--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -70,7 +70,7 @@
             Feminismus, Migration
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Emilia Fester war bei ihrer Wahl in den Bundestag 2021 mit 23 Jahren die jüngste Abgeordnete. Für Belustigung sorgte sie mit ihrer Forderung nach Wahlrecht für Zweijährige und 
             ihrer dramatischen Rede zur Impfpflicht, in der sie behauptete, ihre Jugend geopfert zu haben, während sie tatsächlich verreist war. 
@@ -117,20 +117,20 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             In einer emotional aufgeladenen Bundestagsrede im März 2022 forderte
-            Emilia Fester mit erhobener Stimme eine <b>allgemeine Impfpflicht</b>.
+            Emilia Fester mit erhobener Stimme eine <b class="gruene">allgemeine Impfpflicht</b>.
             Dabei behauptete sie, sie habe „ihre ganze Jugend geopfert“ und sei
             während der Pandemie nicht einmal verreist – eine Aussage, die später als
-            <b>unwahr</b> entlarvt wurde, da sie selbst <mark>Urlaubsbilder</mark> postete.
-        </p>
-        
-        <p class="party-highlight-description">
+            <b class="gruene">unwahr</b> entlarvt wurde, da sie selbst <mark class="gruene">Urlaubsbilder</mark> postete.
+          </p>
+          
+          <p class="party-highlight-description">
             Ihre Rede war geprägt von übertriebener Theatralik, persönlichen
             Anschuldigungen und wenig faktenbasierten Argumenten. Statt
-            sachlicher Auseinandersetzung setzte sie auf <b>moralische Überlegenheit</b>
+            sachlicher Auseinandersetzung setzte sie auf <b class="gruene">moralische Überlegenheit</b>
             und pauschale Schuldzuweisungen. Besonders problematisch war ihr Vorwurf,
-            Ungeimpfte seien <b>egoistisch</b> und würden bewusst Leben gefährden –
+            Ungeimpfte seien <b class="gruene">egoistisch</b> und würden bewusst Leben gefährden –
             eine Behauptung, die wissenschaftlich nicht haltbar war.
-        </p>        
+          </p>
 
         <div class="smallvideo-container">
           <div class="video-wrapper">
