fester und habeck

--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -195,18 +195,20 @@
             Auch Kleinkinder seien von politischen Entscheidungen betroffen und
             sollten deshalb mitbestimmen dürfen. Ein Vorschlag, der zeigt, dass
             in der Politik nicht jeder Vorschlag durchdacht sein muss.
-        </p>
-        
-        <p class="party-highlight-description">
-            Diese Aussage sorgte für breite Kritik, da Zweijährige weder lesen,
-            schreiben noch politische Zusammenhänge verstehen können.
-            Politikwissenschaftler, Medien und Oppositionspolitiker bezeichneten
-            den Vorschlag als <mark>realitätsfern</mark> und <b>populistisch</b>, da
-            Eltern in einem solchen Modell faktisch die Wahlentscheidung für ihre
-            Kleinkinder treffen würden. Kritiker warfen Fester vor, dass sie mit dieser
-            Forderung nicht ernsthaft Politik gestalten, sondern lediglich mediale
-            Aufmerksamkeit erzeugen wollte.
-        </p>        
+          </p>
+          
+          <p class="party-highlight-description">
+            Diese Aussage sorgte für breite Kritik, da Zweijährige weder lesen, 
+            schreiben noch politische Zusammenhänge verstehen können. Aber das ist natürlich 
+            nur eine Kleinigkeit für die Kritiker, die offensichtlich zu begrenzt denken, um 
+            die wahre Genialität hinter Festers Vorschlag zu erkennen. Politikwissenschaftler, 
+            Medien und Oppositionspolitiker bezeichneten den Vorschlag als <mark class="gruene">realitätsfern</mark> 
+            und <b>populistisch</b>, weil Eltern in diesem Modell die Wahlentscheidung für ihre 
+            Kleinkinder treffen würden – aber was wissen diese Kritiker schon über echte 
+            Innovation? Fester wollte mit dieser Forderung nicht nur Politik gestalten, 
+            sondern ein völlig neues politisches Paradigma erschaffen – und wer den Mut hat, 
+            über den Tellerrand zu schauen, wird halt auch mal missverstanden.
+          </p>
 
         <div class="smallvideo-container">
           <div class="video-wrapper">
