--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -221,7 +221,7 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            In einem "NichtMehrGrünenWählerForum" beeindruckte Robert Habeck mit
+            In einem "NichtMehrGrünenWählerForum" beeindruckte <strong>Robert Habeck</strong> mit
             seinen tiefgreifenden Kenntnissen über die Finanzwelt. Er erklärte,
             dass die Eigenkapitalquote der Banken von 8% auf 20% erhöht werden
             sollte.
@@ -231,8 +231,8 @@
             zukunftsweisende Idee reagierten, sahen andere in Habecks Ansatz
             eine visionäre Weitsicht. Schließlich ist es nicht jedem gegeben,
             komplexe wirtschaftliche Zusammenhänge mit einer solchen
-            Leichtigkeit und Flexibilität zu interpretieren – von "Basel III"
-            über "eins zu vier" bis zu "nicht abgedeckten 90 Prozent".
+            Leichtigkeit und Flexibilität zu interpretieren – von <mark class="gruene">"Basel III"</mark>
+            über <mark class="gruene">"eins zu vier"</mark> bis zu <mark class="gruene">"nicht abgedeckten 90 Prozent"</mark>.
           </p>
 
           <div class="smallvideo-container">
